add: portfolio recommendation
